refactor: 升级依赖、更新版权年份并重构测试结构
- 升级 Bouncycastle 从 bcprov-jdk15on 1.70 到 bcprov-jdk18on 1.81
- 添加 bcpkix-jdk18on 和 bcutil-jdk18on 依赖
- 更新所有文件版权年份从 2022-2024 到 2022-2026
- 删除 atom-spring-boot-starter-web 模块的 LoggingAspect 切面类
- 删除 atom-spring-boot-starter-api 模块的无用测试文件
- 删除 atom-spring-boot-starter-core 模块的 utils 包下测试文件
- 删除 atom-spring-boot-starter-jwt 模块的服务测试
- 重组 atom-spring-boot-starter-core 模块的测试文件结构